css/site.css
---
---

@import "_includes/preflight";
@import "_includes/components";
@import "_includes/thankful_eyes";

:root {
  --dark-background: config("colors.background");
  --light-background: config("colors.white");
  --light-text: config("colors.grey-darkest");
  --dark-text: config("colors.white");
  --light-menu-text: config("colors.blue-darkest");
  --dark-menu-text: config("colors.white");
  --light-input-background: config("colors.grey-lighter");
  --dark-input-background: config("colors.grey-darkest");
  --light-input-text: config("colors.grey-darkest");
  --dark-input-text: config("colors.white");

  /* custom properties */
  --background-color: var(--light-background);
  --text-color: var(--light-text);
  --text-menu-color: var(--light-menu-text);
  --input-background-color: var(--light-input-background);
  --input-text-color: var(--light-input-text);
}

.theme {
  background: var(--background-color);
  color: var(--text-color);
  transition: all 250ms ease;
}

.input-background {
  background: var(--input-background-color);
  color: var(--input-text-color);
}

img {
  @apply bg-white;
}

a {
  color: var(--text-color);
  word-wrap: break-word;
  text-decoration: none;
  transition: color 250ms ease;
  transition: border 150ms ease;
}

header a,
header svg {
  color: var(--text-menu-color);
}

form input[type='email'] {
  @apply border-t border-b border-l border-blue-darkest;
}

.gradient-background {
  background: linear-gradient(90deg, #d0021b 33%, #2c5282 66%);
}

.gradient-border {
  border-top-style: solid;
  border-top-width: 7px;
  border-image: linear-gradient(90deg, #d0021b 33%, #2c5282 66%);
}

.full-screen {
  min-height: calc(100vh - 7px);
}

h1 {
  font-size: 2rem;
}

h2 {
  font-size: 1.7rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1.3rem;
}

p,
blockquote,
ul,
ol,
.highlighter-rouge {
  + h1 {
    margin-top: 3rem;
  }

  + h2 {
    margin-top: 3rem;
  }

  + h3 {
    margin-top: 3rem;
  }

  + h4 {
    margin-top: 3rem;
  }
}

blockquote {
  @apply border-l-3;
  
  border-color: var(--text-menu-color);
  font-size: 1.1em;
  font-style: italic;
  margin: 1.5em 0;
  padding-left: 0.75em;
}

.posts > article:nth-child(odd) .post-item:hover {
  @apply border-blue-darkest border-b-4;
}

.posts > article:nth-child(even) .post-item:hover {
  border-bottom: #e3342f solid 4px;
}

.post h1,
.post h2,
.post h3,
.post h4,
.post p,
.post ul,
.post ol,
.post div.highlight,
.about h1,
.about h2,
.about h3,
.about h4,
.about p,
.about ul,
.about ol,
.about div.highlight {
  margin-bottom: 1rem;
}

.post p,
.post ul,
.post ol,
.about p,
.about ul,
.about ol {
  line-height: 2;
}

.post li > ul,
.post li > ol,
.about li > ul,
.about li > ol {
  margin-bottom: 0;
}

.post a,
.about a {
  @apply border-b-2;

  border-color: var(--menu-text-color);
  transition: all 150ms ease;
}

.post a:hover,
.about a:hover {
  @apply pb-1;
}

hr {
  background: #ddd;
  border: 0;
  height: 1px;
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.post hr {
  @apply max-w-1/2 my-8;
}

.mobile-nav {
  overflow-y: hidden;
  max-height: 10rem;
  transition-property: all;
  transition-duration: 150ms;
}

.closed {
  max-height: 0;
}

@tailwind utilities;

